--- a/src/partials/comments.html
+++ b/src/partials/comments.html
@@ -14,8 +14,8 @@
             <p class="comments-wrapper-name">Emma, 41</p>
             <p class="comments-wrapper-text">
               Jag har själv använt Frank & Frey CBD sedan april. Man märker inte
-              förändringen direkt – men plötsligt inser man att man sover bättre
-              och reagerar lugnare.
+              förändringen direkt – men plötsligt inser man att man, sover
+              bättre och reagerar lugnare.
             </p>
             <img
               src="./img/comments/comments1.png"
