--- a/src/partials/formeln.html
+++ b/src/partials/formeln.html
@@ -34,10 +34,7 @@
         />
 
         <p class="formeln-btn">
-          <a
-            href="https://www.google.com/"
-            target="_blank"
-            rel="noopener noreferrer"
+          <a href="#enligt" target="_blank" rel="noopener noreferrer"
             >MER INFO</a
           >
         </p>
