--- a/src/partials/fred.html
+++ b/src/partials/fred.html
@@ -43,10 +43,7 @@
         <img src="./img/fred/fred.png" alt="Image fred" class="fred-img" />
 
         <p class="fred-btn">
-          <a
-            href="https://www.google.com/"
-            target="_blank"
-            rel="noopener noreferrer"
+          <a href="#enligt" target="_blank" rel="noopener noreferrer"
             >MER INFO</a
           >
         </p>
