--- a/src/partials/formeln.html
+++ b/src/partials/formeln.html
@@ -34,9 +34,7 @@
         />
 
         <p class="formeln-btn">
-          <a href="#enligt" target="_blank" rel="noopener noreferrer"
-            >MER INFO</a
-          >
+          <a href="#enligt">MER INFO</a>
         </p>
       </div>
     </div>
